dhhagan published a site update

--- a/genindex.html
+++ b/genindex.html
@@ -165,6 +165,7 @@
  | <a href="#P"><strong>P</strong></a>
  | <a href="#Q"><strong>Q</strong></a>
  | <a href="#S"><strong>S</strong></a>
+ | <a href="#T"><strong>T</strong></a>
  | <a href="#U"><strong>U</strong></a>
  
 </div>
@@ -288,6 +289,14 @@
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="generated/quantaq.client.StagingAPIClient.html#quantaq.client.StagingAPIClient">StagingAPIClient (class in quantaq.client)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="T">T</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="generated/quantaq.utils.to_dataframe.html#quantaq.utils.to_dataframe">to_dataframe() (in module quantaq.utils)</a>
 </li>
   </ul></td>
 </tr></table>
